# kanki

./: .gitignore  README.md  kanki.apkg  kanki.py  kanki_deck_settings.apkg  pyproject.toml
kanki/: card.py  exceptions.py  kanki.py  merriam_webster.py  run.py
tests/: conftest.py  test_card.py  test_kanki.py
