[tool.poetry]
name = "kanki"
version = "0.1.0"
description = "Define and export words looked up on Kindle to Anki"
authors = ["William Johnsson <wjohnsson@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
requests = "^2.27.1"
tabulate = "^0.8.9"

[tool.poetry.dev-dependencies]
pytest = "^7.1.2"
pytest-mock = "^3.7.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
kanki = "kanki.run:main"

[tool.pytest.ini_options]
pythonpath = [
  "./kanki"
]